# sar_mission

cmd_mission/: CMakeLists.txt  CMakeLists.txt~  cmd-mission.asd  cmd-mission.asd~  package.xml
cmd_mission/msg/: #check_objs_relation.msg#  Subgoal.msg  Subgoal.msg~
cmd_mission/scripts/: check_object_type.py  check_object_type.py~  create_frame.py  create_frame.py~  salient_objs_script.py  salient_objs_script.py~  start_salient_objs.py  start_salient_objs.py~
cmd_mission/src/nodes/: closer.cpp  cmd_parser.cpp  cmd_parser.cpp~  get_all_objs.py  get_all_objs.py~
cmd_mission/srv/: #send_command.srv#  all_objs.srv  check_msg.srv  check_obj_property.srv  get_obj_size.srv~  get_obj_type.srv  get_property_list.srv  get_reason_pose.srv  rotate.srv  salient_objs.srv  send_instruction.srv  vector_transform.srv
env_mission/: CMakeLists.txt  package.xml
env_mission/launch/: alpine.launch  alpine.launch~  executables.launch  json_map.launch  logmemory.rrd  logstats.rrd  mission.launch  mountain_map.launch  mountain_map.launch~  scenario.launch  scenario.launch~  simulation.launch  spawn_quadrotor.launch  spawn_quadrotor_with_asus.launch  spawn_quadrotor_with_asus_with_laser.launch  study.launch  unreal_simulation.launch
env_mission/models/alpine/: model.config  model.sdf
env_mission/models/avalanche/: model.config  model.sdf  model.sdf~
env_mission/models/bigtree/: model.config  model.sdf
env_mission/models/bluepylon/: model.config  model.sdf
env_mission/models/box/: model.config  model.sdf
env_mission/models/bridge/: model.config  model.sdf
env_mission/models/brokepylon/: model.config  model.sdf
env_mission/models/genius/: model.config  model.sdf
env_mission/models/ground/: model.config  model.sdf
env_mission/models/house/: model.sdf
env_mission/models/house_broken/: model.config  model.sdf
env_mission/models/hugerock/: model.config  model.config~  model.sdf  model.sdf~
env_mission/models/landscape/: model.config  model.config~  model.sdf
env_mission/models/mountain/: model.config  model.sdf
env_mission/models/path/: model.config  model.sdf  model.sdf~
env_mission/models/pylon/: model.config  model.sdf
env_mission/models/redpylon/: model.config  model.sdf
env_mission/models/river/: model.sdf  model.sdf~
env_mission/models/rock/: model.config  model.sdf
env_mission/models/smallbigtree/: model.config  model.sdf
env_mission/models/smalltree/: model.config  model.config~  model.sdf  model.sdf~
env_mission/models/sphere/: model.config  model.sdf
env_mission/models/tree/: model.config  model.sdf
env_mission/models/victim/: model.sdf
env_mission/models/victim_house/: model.sdf
env_mission/models/wood/: model.config  model.sdf
env_mission/msg/: detect_obj.msg
env_mission/osm/: sem_map01.osm
env_mission/owl/: alpine.owl  alpine.owl~  alpine01.owl  mountain_map.owl  mountain_map01.owl  mountain_map02.owl  mountain_map03.owl  mountain_ontology.owl  osm_sem_map.owl  sem_map.owl  sem_map01.owl  study_map.owl
env_mission/scripts/: convertOSMToOwl.py  convertOWLToOSM.py  convertYamlToOwl.py  detection_publisher.py  detection_subscriber.py  executables.sh
env_mission/urdf-xml/: frames.gv
env_mission/urdf-xml/alpine/: alpine.urdf.xml  alpine.xml  bigtree01.xml  bigtree02.xml  bigtree03.xml  bigtree04.xml  bigtree05.xml  bigtree06.xml  bigtree07.xml  bigtree08.xml  bigtree09.xml  bigtree10.xml  bigtree11.xml  bigtree12.xml  bigtree13.xml  bigtree14.xml  bigtree15.xml  bigtree16.xml  bigtree17.xml  (+60 more)
env_mission/worlds/: #alpine.world#  #study.world#  alpine.world  alpine.world~  mountain_map.world  study.world
img_mission/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
img_mission/catkin_generated/: generate_cached_setup.py  setup_cached.sh
img_mission/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
img_mission/imgs/: placeholder.txt
img_mission/launch/: image_instruction.launch
img_mission/msg/: Strings.msg
img_mission/src/: #spawn_image.cpp#  detector.py  logmemory.rrd  logstats.rrd  pub_img.cpp  pub_img.cpp~  publish_image.cpp  publish_image.cpp~  publishing_storing.cpp  show_image.cpp  show_image.cpp~  spawn_image.cpp  spawn_image.cpp~  store_image.cpp  subscribing_storing.cpp  test.py
img_mission/srv/: ReturnString.srv~
log_mission/: CMakeLists.txt  package.xml
quadrotor_controller/: CMakeLists.txt  package.xml
quadrotor_controller/action/: cmdVel.action
quadrotor_controller/launch/: #spawn_quadrotor_with_asus_with_laser.launch#  quadrotor_simulation.launch  quadrotor_simulation.launch~  quadrotor_study_simulation.launch  quadrotor_unreal_simulation.launch  spawn_quadrotor.launch  spawn_quadrotor.launch~  spawn_quadrotor_with_asus.launch  spawn_quadrotor_with_asus_with_laser.launch  spawn_quadrotor_with_asus_with_laser.launch~  spawn_quadrotor_with_kinect.launch  spawn_quadrotor_with_kinect_study.launch  spawn_quadrotor_with_laser.launch  spawn_quadrotor_with_tilting_laser.launch
quadrotor_controller/meshes/: kinect_camera_simple.dae  quadrotor_base.dae
quadrotor_controller/src/: cmd_executer.cpp  cmd_points.cpp  cmd_pose.cpp  detect_object.cpp  go_short_distance.cpp  laser_scan_data.cpp  pTp2.cpp  pTp2.cpp~  robot_pose.cpp  rotate_cam.cpp  scan_region.cpp  take_off.cpp
quadrotor_controller/srv/: cmd_points.srv  scan_reg.srv  scan_reg.srv~
quadrotor_controller/urdf/: asus_camera.urdf.xacro  hokuyo_utm30lx.urdf.xacro  kinect_camera.urdf.xacro  kinect_camera.urdf.xacro~  kinect_camera_viewfield.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_with_asus_with_2lasers.gazebo.xacro  quadrotor_with_asus_with_2lasers.urdf.xacro  quadrotor_with_asus_with_2lasers.urdf.xacro~  quadrotor_with_kinect.gazebo.xacro  quadrotor_with_kinect.gazebo.xacro~  quadrotor_with_kinect.urdf.xacro  quadrotor_with_kinect.urdf.xacro~
sar_mission/: CMakeLists.txt  package.xml
sar_mission/launch/: start.launch
start_mission/: CMakeLists.txt  package.xml  start-mission.asd
start_mission/src/: auxiliaries.lisp  cost-functions.lisp  costmap-knowledge.lisp  package.lisp  prolog.lisp  starter.lisp
(+150 files in other folders)
